--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "@babel/core": "^7.22.8",
     "@babel/preset-env": "^7.22.7",
     "@babel/preset-react": "^7.22.5",
-    "babel-loader": "^9.1.3"
+    "babel-loader": "^9.1.3",
+    "stylelint": "^13.0.0",
+    "stylelint-config-standard": "^21.0.0",
+    "stylelint-csstree-validator": "^1.0.0",
+    "stylelint-scss": "^3.0.0"
   }
 }
